--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,10 @@
     padding: 20px 60px;
     background-color: white;
     position: relative;
-    z-index: 1;
+    z-index: 6;
+    position: fixed;
+    width: 100%;
+    top: 0;
   }
   
   .logo img {
@@ -131,6 +134,7 @@
     background-color: white;
     color: #2e72d2;
   }
+
 
   /* form section */
 
@@ -318,4 +322,6 @@
   .more-destinations-button:hover {
     background-color: #1955aa;
   }
+
+  
   
