--- a/styles.css
+++ b/styles.css
@@ -323,5 +323,155 @@
     background-color: #1955aa;
   }
 
+
+  /* packages */
+
+  .packages{
+    max-width: 1200px;
+    margin: auto;
+    text-align: center;
+  }
+
+  .title {
+    font-size: 36px;
+    font-weight: 800;
+    margin-bottom: 10px;
+  }
+
+  .description {
+    color: #555;
+    margin-bottom: 40px;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+  }
   
+
+  .package-card {
+    display: flex;
+    background: #fff;
+    border-radius: 12px;
+    overflow: hidden;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+    margin-bottom: 30px;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+    padding: 20px;
+  }
+
+  .package-card img {
+    width: 480px;
+    height: auto;
+    border-radius: 10px;
+    object-fit: cover;
+  }
+
+  .package-info {
+    flex: 1;
+    text-align: left;
+    
+  }
+
+  .details {
+    margin-top: 15px;
+    font-size: 14px;
+    color: #555;
+    
+  }
+
+  .details span {
+    background: #f0f0f0;
+    padding: 6px 12px;
+    border-radius: 30px;
+    margin-right: 8px;
+    display: inline-block;
+  }
+
+  .package-price {
+    background: #4a7fcf;
+    color: white;
+    padding: 30px 20px;
+    border-radius: 10px;
+    min-width: 180px;
+    width: 300px;
+    height: 400px;
+    text-align: center;
   
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+  }
+
+  .package-price .reviews {
+    display: block;
+    margin-bottom: 10px;
+    font-size: 14px;
+  }
+  
+  .package-price .price {
+    font-size: 35px;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  
+  .package-price small {
+    font-size: 13px;
+  }
+
+  .book-btn {
+    background: white;
+    color: #4a7fcf;
+    border: 2px solid white;
+    padding: 10px 18px;
+    border-radius: 25px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: 0.3s ease;
+  }
+  
+  .book-btn:hover {
+    background-color: #ffffffcc;
+  }
+
+  /* photog gallery */
+
+  .photo-gallery {
+    padding: 60px 20px;
+    max-width: 1200px;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .section-header .title {
+    font-size: 40px;
+    font-weight: 800;
+    margin-bottom: 10px;
+    color: #222;
+  }
+
+  .section-header .description {
+    color: #555;
+    max-width: 700px;
+    margin: 0 auto 40px;
+    line-height: 1.6;
+  }
+
+  .gallery-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 20px;
+  }
+
+  .gallery-item {
+    width: 100%;
+    border-radius: 20px;
+    object-fit: cover;
+    height: 100%;
+    display: block;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  }
+
+  .gallery-item:nth-child(3) { grid-area: 1 / 2 / 3 / 3; }
