changed the lorem to originl text

--- a/booknow.css
+++ b/booknow.css
@@ -138,7 +138,7 @@ input.error {
 
 /* confirmation card */
 
-.confirmation-card {
+/* .confirmation-card {
   max-width: 600px;
   margin: 50px auto;
   background: #ffffff;
@@ -186,7 +186,7 @@ input.error {
 
 .back-button:hover {
   background-color: #005fa3;
-}
+} */
 
 
 
